FIX: Added z-index to prioritise overlay

--- a/src/components/base/Overlay/Overlay.css
+++ b/src/components/base/Overlay/Overlay.css
@@ -11,6 +11,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   border-top: 6px solid var(--primary-green);
+  z-index: 10;
 }
 
 .overlay__content {
